--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-    "godot_tools.editor_path": "e:\\Steam\\steamapps\\common\\Godot Engine\\godot.windows.opt.tools.64.exe"
+    "godot_tools.editor_path": "e:\\Steam\\steamapps\\common\\Godot Engine\\godot.windows.opt.tools.64.exe",
+    "godotTools.editorPath.godot4": "e:\\Steam\\steamapps\\common\\Godot Engine\\godot.windows.opt.tools.64.exe"
 }
